fix(labelLayout): spacing of label
There should be some space between input field and label.

* fix spacing
* use a variable for flex-layout-spacing
* add test

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -35,6 +35,7 @@ $icon-sort-descending: "\f22c";
 
 $form-disabled-alpha: 0.5;
 $page-padding-top: 1rem;
+$flex-layout-spacing: 0.5rem;
 
 /* main ---------------------------------------------------------- */
 @mixin adjustCustomControlLabel() {
@@ -367,12 +368,12 @@ tobago-flex-layout {
      Set the minimal width to zero make flex-layout responsive for the width,
      even if there is overflowing content.
      currently e.g. PRE-code blocks in the demo are too wide. XXX */
-  margin-left: -3px;
-  margin-right: -3px;
+  margin-left: -$flex-layout-spacing * 0.5;
+  margin-right: -$flex-layout-spacing * 0.5;
 
   > * {
-    margin-left: 3px;
-    margin-right: 3px;
+    margin-left: $flex-layout-spacing * 0.5;
+    margin-right: $flex-layout-spacing * 0.5;
   }
 
   > tobago-flex-layout {
@@ -385,6 +386,14 @@ tobago-flex-layout {
 .tobago-label-container {
   display: flex;
   align-items: center;
+
+  > label:first-child {
+    margin-right: $flex-layout-spacing;
+  }
+
+  > label:last-child {
+    margin-left: $flex-layout-spacing;
+  }
 
   > label {
     // XXX needs to be customizable
